--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PUBLIC_URL=/merquri-weather-app
+REACT_APP_GEO_CODING_BASE_API=https://api.openweathermap.org/geo/1.0/direct
+REACT_APP_OPENWEATHER_BASE_API=https://api.openweathermap.org/data/2.5/weather
+REACT_APP_API_KEY=638bffd9569966bf90363d4598dba1cd
